--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@portabletext/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@sanity/image-url": "^1.0.1",
+    "@stripe/stripe-js": "^1.35.0",
+    "@types/react-currency-formatter": "^1.1.4",
     "next": "latest",
     "next-sanity": "^0.8.4",
     "react": "18.1.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.3.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "stripe": "^10.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
