--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.35.0",
     "@types/react-currency-formatter": "^1.1.4",
+    "framer-motion": "^7.2.1",
     "next": "latest",
     "next-auth": "^4.10.3",
     "next-auth-sanity": "^1.4.4",
